[gd_scene load_steps=15 format=2]

[ext_resource path="res://TestScene/TestScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://MainMenu/MainMenu.tres" type="Theme" id=3]
[ext_resource path="res://Settings/Settings.tscn" type="PackedScene" id=4]
[ext_resource path="res://MainMenu/MapButtonGroup.tres" type="ButtonGroup" id=5]
[ext_resource path="res://MainMenu/Map0.png" type="Texture" id=6]
[ext_resource path="res://MainMenu/Map1.png" type="Texture" id=8]

[sub_resource type="GDScript" id=7]
script/source = "extends Control

onready var anim_player = $AnimationPlayer
onready var Map0Button = $Map0
onready var Map1Button = $Map1
onready var Map0TextRect = $Map0/TextureRect
onready var Map1TextRect = $Map1/TextureRect

func _ready():
	pass
"

[sub_resource type="ButtonGroup" id=6]

[sub_resource type="Animation" id=3]
resource_name = "Map0Pressed"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("Map0/TextureRect:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.792157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Map0/TextureRect:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.792157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Map0/TextureRect:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.792157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Map0/TextureRect:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Map1/TextureRect:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.792157, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Map1/TextureRect:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0.792157, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Map1/TextureRect:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0.792157, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Map1/TextureRect:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=5]
resource_name = "Map1Pressed"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("Map1/TextureRect:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.792157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Map1/TextureRect:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.792157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Map1/TextureRect:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.792157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Map1/TextureRect:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Map0/TextureRect:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.792157, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Map0/TextureRect:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0.792157, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Map0/TextureRect:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0.792157, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Map0/TextureRect:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Map0/TextureRect:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Map0/TextureRect:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Map0/TextureRect:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Map0/TextureRect:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Map1/TextureRect:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Map1/TextureRect:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Map1/TextureRect:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Map1/TextureRect:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TestScene:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "RotationBackground"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TestScene:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -203.0
margin_right = 203.0
margin_bottom = 197.0
alignment = 1

[node name="Username" type="LineEdit" parent="Control/VBoxContainer"]
margin_top = 137.0
margin_right = 400.0
margin_bottom = 175.0
align = 1
placeholder_text = "Username"

[node name="Ip" type="LineEdit" parent="Control/VBoxContainer"]
margin_top = 179.0
margin_right = 400.0
margin_bottom = 217.0
align = 1
placeholder_text = "IP or Hostname"

[node name="Button" type="Button" parent="Control/VBoxContainer"]
margin_top = 221.0
margin_right = 400.0
margin_bottom = 255.0
text = "Play!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 259.0
margin_right = 400.0
margin_bottom = 259.0

[node name="MapSelection" type="Control" parent="Control/VBoxContainer"]
margin_top = 263.0
margin_right = 400.0
margin_bottom = 263.0
script = SubResource( 7 )

[node name="Map0" type="CheckBox" parent="Control/VBoxContainer/MapSelection"]
margin_right = 100.0
margin_bottom = 100.0
group = ExtResource( 5 )
text = "Map0"

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer/MapSelection/Map0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 700.0
margin_bottom = 700.0
rect_scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 6 )

[node name="Map1" type="CheckBox" parent="Control/VBoxContainer/MapSelection"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_bottom = 100.0
group = SubResource( 6 )
text = "Map1"

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer/MapSelection/Map1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 700.0
margin_bottom = 700.0
rect_scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/VBoxContainer/MapSelection"]
anims/Map0Pressed = SubResource( 3 )
anims/Map1Pressed = SubResource( 5 )
anims/RESET = SubResource( 4 )

[node name="Options" type="Button" parent="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -17.0
margin_right = 100.0
margin_bottom = 17.0
text = "Options"

[node name="Settings" parent="." instance=ExtResource( 4 )]
visible = false

[node name="TestScene" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/RotationBackground = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.707107, 0.241845, -0.664463, 0, 0.939693, 0.34202, 0.707107, -0.241845, 0.664463, -8, 5, 8 )
current = true

[connection signal="pressed" from="Control/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Options" to="." method="_on_Options_pressed"]
[connection signal="exit_settings" from="Settings" to="." method="_on_Settings_exit_settings"]
